--- a/conf/logging-default.properties
+++ b/conf/logging-default.properties
@@ -25,7 +25,7 @@
 ############################################################
 
 # Log to file and console
-handlers = java.util.logging.FileHandler, java.util.logging.ConsoleHandler, MemoryHandler
+handlers = java.util.logging.FileHandler, java.util.logging.ConsoleHandler, nxt.util.MemoryHandler
 
 # Default logging level (OFF, FINE, INFO, WARNING, SEVERE)
 .level = SEVERE
