--- a/conf/logging-default.properties
+++ b/conf/logging-default.properties
@@ -28,11 +28,11 @@
 handlers = java.util.logging.FileHandler, java.util.logging.ConsoleHandler, nxt.util.MemoryHandler
 
 # Default logging level (OFF, FINE, INFO, WARNING, SEVERE)
-.level = SEVERE
+.level = FINE
 
 # Nxt logging level (OFF, FINE, INFO, WARNING, SEVERE)
 nxt.level = FINE
-APIProxyServlet.level = INFO
+APIProxyServlet.level = FINE
 
 # Jetty logging level (OFF, FINE, INFO, WARNING, SEVERE)
 org.eclipse.jetty.level = OFF
