removed useless nodes

--- a/conf/nxt-default.properties
+++ b/conf/nxt-default.properties
@@ -68,7 +68,7 @@ nxt.myHallmark=
 
 # Default initial peers. Only used if nxt.usePeersDb=true.
 # Do not modify. Add custom peers to nxt.wellKnownPeers instead.
-nxt.defaultPeers=node1.elasticexplorer.org; node2.elasticexplorer.org; node3.elasticexplorer.org; node4.elasticexplorer.org; node5.elasticexplorer.org; node6.elasticexplorer.org; node7.elasticexplorer.org; node8.elasticexplorer.org; node9.elasticexplorer.org; node10.elasticexplorer.org; node11.elasticexplorer.org; node12.elasticexplorer.org; node13.elasticexplorer.org; node14.elasticexplorer.org; node15.elasticexplorer.org; node16.elasticexplorer.org; node17.elasticexplorer.org; node18.elasticexplorer.org; node19.elasticexplorer.org; node20.elasticexplorer.org; elasticnode1.mooo.com; elasticnode2.mooo.com; wallet.elastic.pw; node2.elastic.pw; 173.208.130.154; 67.205.142.199
+nxt.defaultPeers=node1.elasticexplorer.org; node2.elasticexplorer.org; node3.elasticexplorer.org; node4.elasticexplorer.org; node5.elasticexplorer.org; node6.elasticexplorer.org; node7.elasticexplorer.org; node8.elasticexplorer.org; node9.elasticexplorer.org; node10.elasticexplorer.org; elasticnode1.mooo.com; elasticnode2.mooo.com; wallet.elastic.pw; node2.elastic.pw; 173.208.130.154; 67.205.142.199
 
 # A list of well known peer addresses / host names, separated by '; '. These
 # peers are always kept in connected state.
