updated defaultPeers list with active peers to this date

--- a/conf/nxt-default.properties
+++ b/conf/nxt-default.properties
@@ -68,7 +68,7 @@ nxt.myHallmark=
 
 # Default initial peers. Only used if nxt.usePeersDb=true.
 # Do not modify. Add custom peers to nxt.wellKnownPeers instead.
-nxt.defaultPeers=node1.elasticexplorer.org; node2.elasticexplorer.org; node3.elasticexplorer.org; node4.elasticexplorer.org; node5.elasticexplorer.org; node6.elasticexplorer.org; node7.elasticexplorer.org; node8.elasticexplorer.org; node9.elasticexplorer.org; node10.elasticexplorer.org; elasticnode1.mooo.com; elasticnode2.mooo.com; wallet.elastic.pw; node2.elastic.pw; 173.208.130.154; 67.205.142.199
+nxt.defaultPeers=5.196.28.203; 202.122.36.3; 14.199.248.62; 45.32.238.127; 45.32.205.141; 45.76.136.116; 13.113.103.17; 76.74.177.251; 45.32.236.185; 176.28.14.179; 46.101.97.162; 52.79.220.188; 164.132.195.202; 158.69.203.236; 52.23.182.10; 164.132.195.206; 54.227.253.117; 91.40.209.50; 130.211.178.162; elasticnode1.mooo.com; elasticnode2.mooo.com; wallet.elastic.pw; node2.elastic.pw; 173.208.130.154; 67.205.142.199
 
 # A list of well known peer addresses / host names, separated by '; '. These
 # peers are always kept in connected state.
