catch up and work parser turn off

--- a/conf/nxt-junit-default.properties
+++ b/conf/nxt-junit-default.properties
@@ -20,6 +20,12 @@
 # nxt.properties override those in nxt-default.properties.
 
 
+#### COMPUTATION ENGINE ####
+# You do not need to enable the computaton engine, elastic works fine without it. Only enable this if you# carefully reviewed the code and agreed
+# that you either want to participate in solving work or if you want to have your work solved. Everything at your own risk!
+
+nxt.enableComputationEngine=true
+
 
 #### SYSTEM ####
 
