--- a/conf/nxt-default.properties
+++ b/conf/nxt-default.properties
@@ -42,7 +42,7 @@ nxt.enableComputationEngine=true
 nxt.shareMyAddress=true
 
 # Port for incoming peer to peer networking requests, if enabled.
-nxt.peerServerPort=17874
+nxt.peerServerPort=19874
 
 # Enable UPnP for the peer port.
 nxt.enablePeerUPnP=true
@@ -73,7 +73,7 @@ nxt.myHallmark=
 
 # Default initial peers. Only used if nxt.usePeersDb=true.
 # Do not modify. Add custom peers to nxt.wellKnownPeers instead.
-nxt.defaultPeers=5.196.28.203; 202.122.36.3; 14.199.248.62; 45.32.238.127; 45.32.205.141; 45.76.136.116; 13.113.103.17; 76.74.177.251; 45.32.236.185; 176.28.14.179; 46.101.97.162; 52.79.220.188; 164.132.195.202; 158.69.203.236; 52.23.182.10; 164.132.195.206; 54.227.253.117; 91.40.209.50; 130.211.178.162; elasticnode1.mooo.com; elasticnode2.mooo.com; wallet.elastic.pw; node2.elastic.pw; 173.208.130.154; 67.205.142.199
+nxt.defaultPeers=52.28.123.208; 52.57.31.137
 
 # A list of well known peer addresses / host names, separated by '; '. These
 # peers are always kept in connected state.
@@ -192,11 +192,11 @@ nxt.enableAPIServer=true
 nxt.allowedBotHosts=127.0.0.1; localhost; [0:0:0:0:0:0:0:1];
 
 # Port for http/json API requests.
-nxt.apiServerPort=17876
+nxt.apiServerPort=19876
 
 # Port for https/json API request. If same as nxt.apiServerPort, the nxt.apiSSL
 # setting determines whether SSL is used or not.
-nxt.apiServerSSLPort=17876
+nxt.apiServerSSLPort=19876
 
 # Enable UPnP for the API ports.
 nxt.enableAPIUPnP=false
