--- a/conf/nxt-default.properties
+++ b/conf/nxt-default.properties
@@ -491,7 +491,9 @@ nxt.maxNumberOfForgers=100
 
 # Verify batches of blocks downloaded from a single peer with that many other
 # peers.
-nxt.numberOfForkConfirmations=2
+
+#the next one must be set to two for production TODO
+nxt.numberOfForkConfirmations=1 
 nxt.testnetNumberOfForkConfirmations=1
 
 # Enable re-broadcasting of new transactions until they are received back from
