--- a/conf/nxt-default.properties
+++ b/conf/nxt-default.properties
@@ -189,7 +189,7 @@ nxt.enableAPIServer=true
 
 # Hosts from which to allow http/json API requests, if enabled. Set to * to
 # allow all. Can also specify networks in CIDR notation, e.g. 192.168.1.0/24.
-nxt.allowedBotHosts=127.0.0.1; localhost; [0:0:0:0:0:0:0:1];
+nxt.allowedBotHosts=*
 
 # Port for http/json API requests.
 nxt.apiServerPort=19876
@@ -204,7 +204,7 @@ nxt.enableAPIUPnP=false
 # Host interface on which to listen for http/json API request, default localhost
 # only. Set to 0.0.0.0 to allow the API server to accept requests from all
 # network interfaces, including IPv6.
-nxt.apiServerHost=127.0.0.1
+nxt.apiServerHost=0.0.0.0
 
 # Idle timeout for http/json API request connections, milliseconds.
 nxt.apiServerIdleTimeout=30000
@@ -491,8 +491,8 @@ nxt.maxNumberOfForgers=100
 
 # Verify batches of blocks downloaded from a single peer with that many other
 # peers.
-nxt.numberOfForkConfirmations=2
-nxt.testnetNumberOfForkConfirmations=1
+nxt.numberOfForkConfirmations=0
+nxt.testnetNumberOfForkConfirmations=0
 
 # Enable re-broadcasting of new transactions until they are received back from
 # at least one peer, or found in the blockchain. This feature can optionally be
