--- a/conf/nxt-default.properties
+++ b/conf/nxt-default.properties
@@ -24,6 +24,7 @@
 # that you either want to participate in solving work or if you want to have your work solved. Everything at your own risk!
 
 nxt.enableComputationEngine=true
+nxt.longPollFromAnywhere=true
 
 #### SYSTEM ####
 
