--- a/conf/nxt-default.properties
+++ b/conf/nxt-default.properties
@@ -195,6 +195,9 @@ nxt.allowedBotHosts=*
 # Port for http/json API requests.
 nxt.apiServerPort=19876
 
+# Enable HTML Based Test-VM Debugger
+nxt.enableHtmlDebugger=true
+
 # Port for https/json API request. If same as nxt.apiServerPort, the nxt.apiSSL
 # setting determines whether SSL is used or not.
 nxt.apiServerSSLPort=19876
